# factory-agent-langchain

./: README.md  course.py  pyproject.toml  pytest.ini
factory_agent_langchain/: agent.py  factory_agent_langchain.py
tests/: test_agent.py  test_course.py  test_langchain.py
