[tool.poetry]
name = "factory-agent-langchain"
version = "0.1.0"
description = ""
authors = ["Kamolsit Mongkolsrisawat <kamolsit@computerlogy.com>"]
readme = "README.md"
packages = [{include = "factory_agent_langchain"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pytest = "^7.4.0"
langchain = "^0.0.222"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]